removal of ads and analytics

--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/3bd9bf448f.js" crossorigin="anonymous"></script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153672124-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-153672124-1');
-  </script>
-  <script data-ad-client="ca-pub-2422111700064978" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script></head>
+</head>
 <body class="vh-100">
   <app-root></app-root>
 </body>
